# spleeter-gui

./: .gitignore  README.md  build.py  main.py  pyproject.toml  setup.py
spleeter_gui/: SpleeterGUI.py  main.qml
