[tool.poetry]
name = "spleeter-gui"
version = "0.1.0"
description = ""
authors = ["Bruno Marques <bruno@bmarques.net>"]

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
spleeter = "^1.4.9"
pyside2 = "^5.14.1"

[tool.poetry.dev-dependencies]
py2app = "^0.21"
py2exe = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
