[tool.poetry]
name = "spleeter-gui"
version = "0.1.0"
description = ""
authors = ["Bruno Marques <bruno@bmarques.net>"]

[tool.poetry.dependencies]
# WARNING: currently spleeter depends on tensorflow 1.14.x, which depends on
# enum34, which breaks pyinstaller; any references to enum34 that creep into
# poetry.lock must be manually removed (as does the package itself) until this
# mess gets solved
# https://github.com/python-poetry/poetry/issues/1122
# https://github.com/tensorflow/tensorflow/issues/18480
python = ">=3.6, <3.8"
spleeter = "^1.4.9"
pyside2 = "^5.14.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
macholib = {version = "^1.14", platform = "darwin"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
